changed title to index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- DOCTYPE HTML -->
 <html>
 <head>
-	<title>My portfolio page</title>
+	<title>Theodora Kapsali | Spark Inspirations</title>
 	<style type="text/css">
 	<!-- CSS goes here --> 
 	</style>
