changed title in index2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</script>
 </head>
 <body>
-<h1>My portfolio<h1>
+<h1>Theodora Kapsali | Spark Inspirations<h1>
 <!-- Add HTML below -->
 </body>
 </html>
