--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 <h1>Theodora Kapsali | Spark Inspirations<h1>
 <!-- Add HTML below -->
-<h2> theodora@spark.tools<h2>
+<img src='Theodora Orange.jpg' alt='Theodora'
+<h2>theodora@spark.tools<h2>
 </body>
 </html>
