added contact and list

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 <h1>Theodora Kapsali | Spark Inspirations<h1>
 <!-- Add HTML below -->
 <img src='Theodora_Orange.jpg' alt='Theodora'
+
+<h2>Theodora Kapsali<h2>
 <h2>theodora@spark.tools<h2>
+
+<h2>Skills:<h2>
+<h3>-Marketing<h3>
+<h3>-Computers<h3>
 </body>
 </html>
