--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <h1>Theodora Kapsali | Spark Inspirations<h1>
 <!-- Add HTML below -->
-<img src='Theodora_Orange.jpg' alt='Theodora'
+<img src='Theodora_Orange.jpg' alt='Theodora'>
 
 <h2>Theodora Kapsali<h2>
 <h2>theodora@spark.tools<h2>
